[package]
name = "pls_parser"
version = "0.2.0"
edition = "2021"
description = """A Rust programm for parsing PLS (Playlist) files.
PLS files are commonly used to store playlists for multimedia applications.
This applications allows you to read the content of PLS files
and display it in the command line.
You can test it using 'cargo run test_data.pls' command"""
license = "MIT"

[dependencies]
peg = "0.8.2"
clap = "2.33"